--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.2"
   },
